@@ -1,2 +1,3 @@
 etc/*   etc/
 usr/*   usr/
+var/*   var/
