@@ -1,1 +1,4 @@
-{}
+{
+    "ip": "0.0.0.0",
+    "port": 4456
+}
